# demoIW

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_domain_schema.py  0003_seed_scenarios.py
backend/app/: config.py  container.py  main.py
backend/app/domain/: enums.py  exceptions.py
backend/app/infrastructure/: database.py  logging.py
backend/app/ports/: dataset_port.py  llm_port.py  repositories.py  scoring_port.py
backend/app/routers/: health.py  scenarios.py
backend/tests/: conftest.py  test_csv_upload.py  test_health.py  test_prioritized_endpoint.py  test_rescore_endpoint.py  test_scenarios_api.py
backend/tests/adapters/: test_mappers.py  test_procedural_generator.py
backend/tests/domain/: test_entities.py  test_payment_behaviour.py
backend/tests/integration/: test_build_training_set_integration.py  test_generate_scenario.py  test_prioritize_scenario_integration.py  test_scenario_acceptance_gate.py  test_score_explanation_integration.py  test_score_scenario_integration.py
backend/tests/ports/: test_llm_port.py
backend/tests/unit/: test_build_training_set.py  test_client_repository.py  test_evaluation_metrics.py  test_feature_extractor.py  test_generate_dataset.py  test_invoice_repository.py  test_llm_enrichment_service.py  test_openrouter_adapter.py  test_outcome_labeller.py  test_payment_repository.py  test_prioritized_case.py  test_prioritizer.py  (+5 more)
(+329 files in other folders)
