[project]
name = "demoiw-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

# pandas has no bundled type stubs; pandas-stubs under strict mode is excessively
# noisy for the df-heavy generation layer. Treat pandas as untyped at its module
# boundary — RawDataset confines DataFrames so the Any does not leak into domain
# entities. numpy and faker remain strictly typed.
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
